added custom rule so basket / contents stay fixed / sticky - list is behaving a bit strangely on resize, but working

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,3 +78,9 @@
     @apply bg-background text-foreground;
   }
 }
+
+@media (min-width: 1200px) {
+  .custom-right {
+    right: calc((100vw - 1200px) / 2 + 20px);
+  }
+}
